fixed white space at the bottom of the page

--- a/src/Projects/Project/Utsearch/Utsearch.scss
+++ b/src/Projects/Project/Utsearch/Utsearch.scss
@@ -102,3 +102,7 @@
     }
   }
 }
+
+#utsearch-page {
+  min-height: 65vh;
+}
